# Craft

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt  calculate_light_levels.py  rebuild.sh
shaders/: block_fragment.glsl  block_vertex.glsl
src/: CMakeLists.txt  Model.h  block_map.cpp  block_map.h  chunk.c  chunk.cpp  chunk.h  chunk_map.cpp  chunk_map.h  client.cpp  config.h  cube.cpp  cube.h  db.cpp  db.h  draw.c  draw.cpp  draw.h  height_map.h  item.cpp  item.h  main.c  main.cpp  map.cpp  map.h  matrix.cpp  matrix.h  model.cpp  model.h  player.cpp  player.h  util.cpp  util.h  worker.cpp  worker.h  world.cpp  world.h
src/actors/: Actors.cpp  Actors.h  ChunkManager.cpp  ChunkManager.h  World.cpp  World.h  WorldManager.cpp  WorldManager.h
src/biomes/: biome.h  flatland.cpp  flatland.h  mountains.cpp  mountains.h  rolling_planes.cpp  rolling_planes.h
src/chunk/: ChunkMesh.cpp  ChunkMesh.h  ChunkRenderData.cpp  ChunkRenderData.h  TransientChunk.cpp  TransientChunk.h  TransientChunkMesh.cpp  TransientChunkMesh.h  VisualChunk.cpp  VisualChunk.h  chunk.cpp  chunk.h
src/chunks/: chunk.cpp  chunk.h  chunk_mesh.cpp  chunk_mesh.h  visual_chunk.h
src/game/: WorldActor.cpp  WorldActor.h
src/lighting/: LightingAlgorithm.h  ScanlineFill.cpp  ScanlineFill.h
src/terrain_features/: TerrainFeature.cpp  TerrainFeature.h
src/terrain_features/trees/: OakTree.cpp  OakTree.h
src/workers/tasks/: generate_chunk_task.cpp  generate_chunk_task.h  task.h
